hotfix: correct max-width for profile name on mobile

--- a/blocks/profile/__name-container/profile__name-container.css
+++ b/blocks/profile/__name-container/profile__name-container.css
@@ -5,6 +5,6 @@
 
 @media screen and (max-width: 636px) {
   .profile__name-container {
-    max-width: 80%;
+    max-width: 86%;
   }
 }
